package config

interface ConfigProvider {
    var lastDepth: Double
}
